--- a/public-bundle-config.json
+++ b/public-bundle-config.json
@@ -1,7 +1,7 @@
 {
   "name": "typerepo",
   "slug": "typerepo",
-  "description": "The new way to dev",
+  "description": "The new way to dev.",
   "isGitRepoPublic": true,
   "emoji": "🏰",
   "primaryColor": "#3679c5",
