The new way to dev

--- a/public-bundle-config.json
+++ b/public-bundle-config.json
@@ -1,15 +1,15 @@
 {
-  "name": "typerepo",
-  "slug": "typerepo",
-  "description": "The new way to dev.",
-  "isGitRepoPublic": true,
-  "emoji": "🏰",
-  "primaryColor": "#3679c5",
-  "gitRepoUrl": "https://github.com/CodeFromAnywhere/typerepo",
   "createdAt": 1667640180389,
   "updatedAt": 1667640180389,
   "deletedAt": 0,
   "createdFirstAt": 1667640180389,
+  "name": "typerepo",
+  "slug": "typerepo",
+  "description": "The new way to dev",
+  "isGitRepoPublic": true,
+  "emoji": "🏰",
+  "primaryColor": "#3679c5",
+  "gitRepoUrl": "https://github.com/CodeFromAnywhere/typerepo",
   "id": "kskoqvkjdmei8vusdkwovopwksjs",
   "language": "en",
   "categoryStackCalculated": [],
