--- a/public-bundle-config.json
+++ b/public-bundle-config.json
@@ -18,6 +18,7 @@
       "k-dev",
       "new-template",
       "generate-sdk-operations",
+      "rebuild-operation",
       "markdown-reader-web",
       "db-web",
       "himalayajeep-web"
