--- a/public-bundle-config.json
+++ b/public-bundle-config.json
@@ -33,5 +33,5 @@
   "deploymentHostname": "typerepo.com",
   "operationName": null,
   "projectRelativePath": "/db/bundle-configs/typerepo.json",
-  "categoryStackCalculated": []
+  "categoryStack": []
 }
